# planarc

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  fitness_tracking_app_technical_spec.md
backend/: Dockerfile  README.md  dev.sh  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260411_0001_milestone1_foundation.py  20260411_0002_logging.py  20260412_0003_workouts.py  20260412_0004_photos.py  20260413_0005_remove_photos.py
backend/app/: bootstrap.py  main.py  web.py
backend/app/api/: analytics.py  auth.py  daily_logs.py  deps.py  goals.py  health.py  measurements.py  phases.py  profile.py  router.py  workouts.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  auth_session.py  daily_log.py  exercise_reference_pr.py  goal.py  measurement.py  mixins.py  phase.py  profile.py  user.py  workout.py  workout_exercise.py  workout_set.py
backend/app/repositories/: daily_log_repository.py  goal_repository.py  measurement_repository.py  phase_repository.py  profile_repository.py  session_repository.py  user_repository.py  workout_repository.py
backend/app/schemas/: analytics.py  auth.py  daily_log.py  goal.py  measurement.py  phase.py  profile.py  workout.py
backend/app/services/: analytics_service.py  auth_service.py  goal_service.py  measurement_service.py  seed_service.py  workout_service.py
backend/app/tests/: conftest.py  (+7 more)
backend/planarc_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/wta_backend.egg-info/: PKG-INFO  SOURCES.txt
(+38 files in other folders)
